<resources>
    <string name="app_name">Liga</string>
    <string name="RdbBtm">Batman</string>
    <string name="RdbSpm">Super-Man</string>
    <string name="RdbMlrMrv">Mulher-Maravilha</string>
    <string name="RdbLntnVrd">Lanterna-Verde</string>
    <string name="RdbFlsh">Flash</string>
    <string name="BtnInfo">Informações</string>
    <string name="TxtVNome">Nome: Bruce Wayne;</string>
    <string name="TxtVNome1">Nome: Clark kent, Kal-El;</string>
    <string name="TxtVNome2">Nome: Diana Prince;</string>
    <string name="TxtVNome3">Nome: Hal Jordan;</string>
    <string name="TxtVNome4">Nome: Barry Allen;</string>
    <string name="TxtCodi">Codinome: Batman;</string>
    <string name="TxtCodi1">Codinome: Super-Man;</string>
    <string name="TxtCodi2">Codinome: Mulher-Maravilha;</string>
    <string name="TxtCodi3">Codinome: Lanterna Verde;</string>
    <string name="TxtCodi4">Codinome: Flash;</string>
    <string name="TxtEspecie">Especie: Humano;</string>
    <string name="TxtEspecie1">Especie: Kryptoniano;</string>
    <string name="TxtEspecie2">Especie: Amazona;</string>
    <string name="TxtEspecie3">Especie: Humano;</string>
    <string name="TxtEspecie4">Especie: Humano;</string>
    <string name="TxtHabi">Habilidades: Pico Fisico, Inteligencia avançada, conhecimento de artes-marciais;</string>
    <string name="TxtHabi1">Habilidades: Super-força, Super agilidade, Voo, Visão de Calor, Sopro congelante, Super Sentidos;</string>
    <string name="TxtHabi2">Habilidades: Força, Vôo;</string>
    <string name="TxtHabi3">Habilidades: Hábil Piloto;</string>
    <string name="TxtHabi4">Habilidades: Super velocidade, reflexos aprimorados;</string>
    <string name="TxtVul">Vulnerabilidades: É um mero humano, ataques mentais;</string>
    <string name="TxtVul1">Vulnerabilidades: Kryptonita verde, magia;</string>
    <string name="TxtVul2">Vulnerabilidades: Gases toxicos, coisas perfurantes;</string>
    <string name="TxtVul3">Vulnerabilidades: Sentimentos como medo, raiva, ganancia, amor;</string>
    <string name="TxtVul4">Vulnerabilidades: Ainda é humano, caso parado pode ser facilmente morto;</string>
    <string name="TxtEquip">Equipamentos: Cinto de ultilidades, Batmóvel, Batarangues.</string>
    <string name="TxtEquip1">Equipamentos: Nenhum.</string>
    <string name="TxtEquip2">Equipamentos: Laço e Braceletes.</string>
    <string name="TxtEquip3">Equipamentos: Anel do Poder, Bateria.</string>
    <string name="TxtEquip4">Equipamentos: Traje do god flash.</string>
    <string name="BtnSM">Saiba mais</string>
    <string name="BtnSM1">Saiba mais</string>
    <string name="BtnSM2">Saiba mais</string>
    <string name="BtnSM3">Saiba mais</string>
    <string name="BtnSM4">Saiba mais</string>
</resources>